--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -125,25 +125,25 @@
               Connexion
             </p>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-              <%= form_for(:user, :url => session_path(:user), html: { class: "navbar-form navbar-right form-inline" }) do |f| %>
-                      <div class="form-group">
-                        <%= f.text_field :email, :placeholder => "Email", class: "form-control" %>
-                      </div>
-                      <div class="form-group">
-                        <%= f.password_field :password, :placeholder => "Password", class: "form-control"  %>
-                      </div>
-                      <div class="checkbox">
-                        <%= f.check_box :remember_me %><%= f.label :remember_me %>
-                      </div>
-                      <%= f.submit 'Login', class: "btn btn-default" %>
-              <% end %>
+                <%= form_for(:user, :url => session_path(:user), html: { class: "navbar-form navbar-right form-inline d-flex flex-column justify-content-start" }) do |f| %>
+                <div class="form-group">
+                  <%= f.text_field :email, :placeholder => "Email", class: "form-control" %>
+                </div>
+                <div class="form-group">
+                  <%= f.password_field :password, :placeholder => "Password", class: "form-control"  %>
+                </div>
+                <div class="checkbox">
+                  <%= f.check_box :remember_me %><%= f.label :remember_me %>
+                </div>
+                <%= f.submit 'Login', class: "btn btn-default" %>
+                <% end %>
             </div>
           <% else %>
             <a class="nav-link dropdown-toggle" href="/soutenir" id="navbarDropdownMenuLink" role="button" aria-haspopup="true" aria-expanded="false">
               Connexion
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-              <%= form_for(:user, :url => session_path(:user), html: { class: "navbar-form navbar-right form-inline" }) do |f| %>
+              <%= form_for(:user, :url => session_path(:user), html: { class: "navbar-form navbar-right form-inline d-flex flex-column justify-content-start" }) do |f| %>
                       <div class="form-group">
                         <%= f.text_field :email, :placeholder => "Email", class: "form-control" %>
                       </div>
