fix bug connection-dropdown in lg

--- a/app/stylesheets/components/_navbar.scss
+++ b/app/stylesheets/components/_navbar.scss
@@ -23,6 +23,9 @@
   .home {
     margin-top: 5px;
   }
+  .dropdown-connexion{
+    width: 300px;
+  }
   .home-nav-link {
     color: $light-gray;
     font-size: 26px;
