--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -100,7 +100,7 @@
         <%= link_to  "Contact", contact_path, class:"nav-link text-light-gray pl-lg-3 position borderus pl-lg-5"%>
       </li>
 
-      <li class="nav-item m-3 dropdown bold-link">
+      <li class="nav-item m-3 dropdown bold-link ">
         <% if user_signed_in? %>
           <% if mobile_device == "mobile" %>
             <p class="nav-link dropdown-toggle" role="button" aria-haspopup="true" aria-expanded="false">
@@ -124,7 +124,7 @@
             <p class="nav-link dropdown-toggle" role="button" aria-haspopup="true" aria-expanded="false">
               Connexion
             </p>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+            <div class="dropdown-menu dropdown-connexion" aria-labelledby="navbarDropdownMenuLink">
                 <%= form_for(:user, :url => session_path(:user), html: { class: "navbar-form navbar-right form-inline d-flex flex-column justify-content-start" }) do |f| %>
                 <div class="form-group">
                   <%= f.text_field :email, :placeholder => "Email", class: "form-control" %>
@@ -132,7 +132,7 @@
                 <div class="form-group">
                   <%= f.password_field :password, :placeholder => "Password", class: "form-control"  %>
                 </div>
-                <div class="checkbox">
+                <div class="checkbox d-flex align-items-center">
                   <%= f.check_box :remember_me %><%= f.label :remember_me %>
                 </div>
                 <%= f.submit 'Login', class: "btn btn-default" %>
@@ -142,15 +142,15 @@
             <a class="nav-link dropdown-toggle" href="/soutenir" id="navbarDropdownMenuLink" role="button" aria-haspopup="true" aria-expanded="false">
               Connexion
             </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+            <div class="dropdown-menu dropdown-connexion" aria-labelledby="navbarDropdownMenuLink">
               <%= form_for(:user, :url => session_path(:user), html: { class: "navbar-form navbar-right form-inline d-flex flex-column justify-content-start" }) do |f| %>
                       <div class="form-group">
                         <%= f.text_field :email, :placeholder => "Email", class: "form-control" %>
                       </div>
-                      <div class="form-group">
+                      <div class="form-group ">
                         <%= f.password_field :password, :placeholder => "Password", class: "form-control"  %>
                       </div>
-                      <div class="checkbox">
+                      <div class="checkbox d-flex align-items-center">
                         <%= f.check_box :remember_me %><%= f.label :remember_me %>
                       </div>
                       <%= f.submit 'Login', class: "btn btn-primary" %>
