add style to edit users_controller view

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -31,7 +31,7 @@
             <div class="col-12 ml-3 mb-4">
               <%= f.input :newsletter_ekg, label: "Oui, je veux recevoir la newsletter mensuelle de l’#{link_to 'association Ekolo[geek]', partenaires_path, target: :blank} (ex. contenu : actualités, recette de saison, Acte ekolo[geek]...)".html_safe %>
             </div>
-            <div class="col-12 ml-3 mb-4">
+            <div class="col-4">
               <%= f.input :password,
                           hint: "mot de passe obligatoire ",
                           required: false,
