--- a/app/views/big_form/company_willing.html.erb
+++ b/app/views/big_form/company_willing.html.erb
@@ -40,6 +40,16 @@
       </label>
     <% end %>
 
+    <p>15. Si Oui, choisissez le·s dispositif·s dans le·lesquel·s votre structure est engagée :</p>
+    <%= f.simple_fields_for @form_dispositive do |f|%>
+      <%= f.collection_check_boxes :dispositive_id, @dispositives, :id, :name do |input| %>
+        <label>
+          <%= input.check_box %>
+          <%= input.text %>
+        </label>
+      <% end %>
+    <% end %>
+
     <!-- à rajouter q15 -->
 
     <%= f.input :structure_concrete_actions, label: "16. Quelles actions concrètes sont actuellement menées en faveur de l'environnement dans votre structure (dans la gestion de l'eau, de l'énergie, réduction des déchets...)?" %>
