--- a/app/views/companies/edit.html.erb
+++ b/app/views/companies/edit.html.erb
@@ -1,25 +1,24 @@
-<h3>sdkjfbwcx </h3>
 <div class="wrapper ">
-  <div class="container viewport space-top">
+  <div class="bg-white container viewport space-top d-flex flex-column align-items-center justify-content-center">
     <%= simple_form_for(@company, url: company_path(@company)) do |f| %>
-      <h3>Structure</h3>
+      <h3 class="mr-2">Structure</h3>
       <div class="row">
         <div class="col-12 col-md-6">
           <%= f.input :name, placeholder: 'Nom de la structure*', label: false %>
         </div>
         <div class="col-12 col-md-6">
           <%= f.input :town, prompt: 'Ville de Bordeaux Métropole*', collection: ["Ambarès-et-Lagrave", "Ambès", "Artigues-près-Bordeaux", "Bassens",
-            "Bègles", "Blanquefort", "Bordeaux", "Bouliac", "Bruges", "Carbon-Blanc",
-            "Cenon", "Eysines", "Floirac", "Gradignan", "Le Bouscat", "Le Haillan",
-            "Le Taillan-Médoc", "Lormont", "Martignas-sur-Jalle", "Mérignac",
-            "Parempuyre", "Pessac", "Saint-Aubin-de-Médoc", "Saint-Louis-de-Montferrand",
-            "Saint-Médard-en-Jalles", "Saint-Vincent-de-Paul", "Talence"], as: :select, label: false  %>
+          "Bègles", "Blanquefort", "Bordeaux", "Bouliac", "Bruges", "Carbon-Blanc",
+          "Cenon", "Eysines", "Floirac", "Gradignan", "Le Bouscat", "Le Haillan",
+          "Le Taillan-Médoc", "Lormont", "Martignas-sur-Jalle", "Mérignac",
+          "Parempuyre", "Pessac", "Saint-Aubin-de-Médoc", "Saint-Louis-de-Montferrand",
+          "Saint-Médard-en-Jalles", "Saint-Vincent-de-Paul", "Talence"], as: :select, label: false  %>
         </div>
-        <div class="pb-5">
-          <%= f.button :submit, "modifier", class: 'btn btn-primary text-white bold' %>
+        <div class=" col-4 offset-4 pb-5">
+          <%= f.button :submit, "modifier", class: 'btn btn-primary text-white bold mr-3 mb-3' %>
+          <%= link_to "Retour", user_path(current_user), class:"btn btn-light mb-3" %>
         </div>
       </div>
     <% end %>
   </div>
-    <%= render 'shared/footer' %>
 </div>
