--- a/app/views/big_form/company_willing.html.erb
+++ b/app/views/big_form/company_willing.html.erb
@@ -43,7 +43,7 @@
     <p>15. Si Oui, choisissez le·s dispositif·s dans le·lesquel·s votre structure est engagée :</p>
     <%= f.simple_fields_for @form_dispositive do |f|%>
       <%= f.collection_check_boxes :dispositive_id, @dispositives, :id, :name do |input| %>
-        <label>
+        <label class="mx-2 mb-3">
           <%= input.check_box %>
           <%= input.text %>
         </label>
