form fonctionne bien, manque encore les validations et le update des many_to_many

--- a/app/views/big_form/referent_willing.html.erb
+++ b/app/views/big_form/referent_willing.html.erb
@@ -64,7 +64,7 @@
 
     <div class="d-flex justify-content-around mb-5 mt-4">
       <%= link_to "< Précédent", previous_wizard_path, class:"btn btn-primary bold" %>
-      <%= f.button :submit, "Envoyer", class:"btn btn-primary bold" %>
+      <%= f.button :submit, "Suivant >", class:"btn btn-primary bold" %>
     </div>
   <% end %>
 </div>
