--- a/app/views/companies_mailer/creation_confirmation.html.erb
+++ b/app/views/companies_mailer/creation_confirmation.html.erb
@@ -1,5 +1,16 @@
-<p>Hi <%= @referent.user.first_name %>,</p>
 
-<p>Today we'll talk about SMTP and Postmark!</p>
+<p>Bonjour  <%= @referent.user.civility %> <%= @referent.user.last_name.upcase %></p>
+
+<p>Vous souhaitez participer au Défi Zéro Déchet des Pros. Bravo pour votre engagement !</p>
+
+<p>Votre compte candidat <%= @referent.company.name %> a bien été créé.</p>
+
+<p>Pour candidater, nous vous invitons dès à présent à vous rendre sur votre compte candidat pour remplir le formulaire. Vous pouvez enregistrer vos réponses, les modifier ou les compléter plus tard.
+Date limite d'envoi du formulaire : 31 décembre 2018.</p>
+
+<p>Notre équipe se tient à votre disposition pour vous aider dans votre candidature.</p>
+
+<p>Cliquez sur le lien ci-dessous pour activer votre compte : [lien]</p>
+
 
 <p>See ya!</p>
