--- a/app/views/big_form/company_infos.html.erb
+++ b/app/views/big_form/company_infos.html.erb
@@ -28,10 +28,7 @@
     </div>
 
     <p>4. Comment avez vous connu le Défi Zéro Déchets des Pros ? </p>
-    <%= f.simple_fields_for @form_company_know_how do |f|%>
-      <%= f.collection_check_boxes :company_know_how_id, @company_know_hows, :id, :origin  %>
-
-    <% end %>
+    <%= f.collection_check_boxes :company_know_how_ids, @company_know_hows, :id, :origin, checked: @form.company_know_hows.map(&:id) %>
 
     <div class="d-flex justify-content-end mb-5 mt-4">
       <%= f.button :submit, "Suivant >", class:"btn btn-primary bold" %>
