add modif in partie 2 google drive

--- a/app/views/companies/new.html.erb
+++ b/app/views/companies/new.html.erb
@@ -1,6 +1,5 @@
 <div class="wrapper down">
-  <div class="container">
-    <div class="bg-white container-padding my-5">
+    <div class="container bg-white container-padding my-5">
       <h1 class="header text-primary text-center pt-5 mt-5">S'inscrire</h1>
       <h2 class="mt-5 mb-4 green-bg">Bordeaux Métropole</h2>
       <div class="row">
@@ -104,6 +103,5 @@
         </div>
       <% end %>
     </div>
-  </div>
   <%= render 'shared/footer' %>
 </div>
