--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,8 +1,7 @@
 <div class="wrapper down">
   <div class="container bg-white container-padding my-5 blue">
-    <%= link_to "test du wizard", big_form_path(:company_infos) %>
-    <h2 class="mt-5 pt-5 text-center">Ekolo[geek] lance le <b>1er Défi Zéro Déchet des pro !</b></h2>
-    <h2 class="mb-5 text-center"><b>Objectif:</b> réduire vos déchets de fonctionnement de 10%</h2>
+    <h2 class="mt-5 pt-5 text-center">Ekolo[geek] lance le <b>1er Défi Zéro Déchet des pros !</b></h2>
+    <h2 class="mb-5 text-center"><b>Objectif :</b> réduire vos déchets de fonctionnement de 10%</h2>
 
     <div class="row">
       <div class="col-12 col-sm-4 mb-4">
@@ -11,7 +10,7 @@
             <img class="card-img-top img-home" src="<%= image_path("home1.png") %>">
             <div class="card-body">
               <div class="card-text fact">
-                <p class="citation-small"> <b>Réduisez</b> vos <b>impacts environnementaux</b> en réduisant vos déchets à la source</p>
+                <p class="citation-small"> <b>Réduisez</b> votre <b>impact environnemental</b> en réduisant vos déchets à la source</p>
               </div>
             </div>
           </div>
