--- a/app/views/pages/soutenir.html.erb
+++ b/app/views/pages/soutenir.html.erb
@@ -4,11 +4,11 @@
     <div id="soutenir4"></div>
     <div class="container-soutenir bg-white container-padding my-5">
       <h1 class="header text-primary text-center mt-5 pt-5">Soutenir</h1>
-      <h4 class="text-center"> Le Défi Zéro Déchet des pro est porté par une association. Il a besoin de vous pour être mis en œuvre ! </h4>
+      <h4 class="text-center"> Le Défi Zéro Déchet des pros est porté par une association. Il a besoin de vous pour être mis en œuvre ! </h4>
 
       <div class="row">
         <div class="col-lg-6 px-4">
-          <h2 class="mt-5 mb-4 green-bg">Mécener</h2>
+          <h2 class="mt-5 mb-4 green-bg">Mécéner</h2>
           <div id="soutenir2"></div>
           <div class="text">
             <p class="mb-0">En vous engageant à nos côtés par votre <b>soutien</b>, votre entreprise est <b>associée à la démarche d'exemplarité et d'innovation</b> de ce projet en matière de réduction des déchets, et peut bénéficier d'une <b>réduction fiscale</b> de 60% de votre don sur votre impôt sur les sociétés. Vous pouvez aussi choisir de nous <b>soutenir en nature</b> (prêt ou achat de matériel, fournitures...) <b>ou en compétences</b>.</p>
@@ -32,8 +32,8 @@
         <div class="col-lg-6 px-4">
           <div>
             <h2 class="mt-5 mb-4 green-bg">Témoigner</h2>
-            <p class='mb-0 text'>Vous êtes un.e professionnel.le <b>déjà engagé.e</b> dans une démarche de réduction des déchets ? Vous avez mis en place plusieurs éco-gestes dans votre structure ? Vous êtes une <b>structure éco-responsable</b> ?</p>
-            <p class="text mb-0"><b>Partagez votre expérience</b> ! Mettez en valeur votre structure et vos salarié.e.s ! Votre témoignage sera inspirant pour d'autres, qui bénéficieront de votre retour d'expérience et voudront également s'engager.
+            <p class='mb-0 text'>Vous êtes un·e professionnel·le <b>déjà engagé.e</b> dans une démarche de réduction des déchets ? Vous avez mis en place plusieurs éco-gestes dans votre structure ? Vous êtes une <b>structure éco-responsable</b> ?</p>
+            <p class="text mb-0"><b>Partagez votre expérience</b> ! Mettez en valeur votre structure et vos salarié·e·s ! Votre témoignage sera inspirant pour d'autres, qui bénéficieront de votre retour d'expérience et voudront également s'engager.
             </p>
           </div>
           <p class="d-flex justify-content-center mt-4 mb-4">
@@ -45,9 +45,12 @@
           <h2 class="mt-5 mb-4 green-bg">Partager / communiquer</h2>
           <div class="d-flex flex-column justify-content-center">
             <p class="text">
-              <b>Faîtes connaître le Défi Zéro Déchet des pro,</b> dans vos différents réseaux personnels et professionnels, vos outils de communication... Voici des liens et outils que vous pouvez utiliser :
+              <b>Faîtes connaître le Défi Zéro Déchet des pros,</b> dans vos différents réseaux personnels et professionnels, vos outils de communication... Voici des liens et outils que vous pouvez utiliser :
             </p>
             <ul class="list mb-4 bullet-custom">
+              <li class="my-2">
+                <%= link_to "Communiqué de press", communique_de_press_path %>
+              </li>
               <li class="my-2">
                 <%= link_to "Dossier de mécénat", dossier_de_mecenat_path %>
               </li>
