--- a/app/views/shared/_carousel.html.erb
+++ b/app/views/shared/_carousel.html.erb
@@ -4,8 +4,8 @@
       <%= image_tag "gestion.jpg", class:"d-block w-100", alt:"First slide" %>
       <div class="carousel-caption">
         <%= link_to "/pourquoi", class:"btn btn-secondary text-white responsive-btn box" do %>
-        <h5><b>140kg de déchets par bureau</b></h5>
-        <p class="mb-0">C'est trop pour vous ?</p>
+        <h5><b>140 kg de déchets par bureau</b></h5>
+        <p class="mb-0">Relevez le Défi Zéro Déchet Des Pros</p>
         <% end %>
       </div>
     </div>
